style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: sans-serif;
  font-size: 1.25rem;
  line-height: 1.5;
  color: #333;
  background-color: #ffffff50;
}

img {
  max-width: 100%;
}

h1, h2 {
  margin-bottom: 15px;
}

ul {
  list-style: none;
}
.navbar .logo {
  font-size: x-large;
  font-weight: bold;
}

.container {
  max-width: 100%;
  margin: 0 auto;
  padding: 0 30px;
}

.navbar {
  background: #ffffff50;
  color: #000;
  height: 7rem;
}

.navbar a {
  color: #000;
  text-decoration: none;
  font-size: 18px;
  font-weight: bold;
}
.navbar .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%;
}
.navbar ul {
  display: flex;
}

.navbar ul li {
  margin-left: 20px;
}

.navbar a:hover {
  color: #88a54a;
}

.header {
  background-color: #0a51cc;
  color: white;
  min-height: 100vh;
}

.header h1 {
  font-size: 3rem;
  font-weight: bold;
  line-height: 1.2;
}
.header img {
  max-width: 400px;
}
.header .container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.boxes .container {
  display: flex;
  justify-content: space-between;
}

.box {
  flex: 1;
  background: #0a51cc;
  color: white;
  border-radius: 10px;
  margin: 20px 10px;
  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
  padding: 15px 20px;
}
.logo-image {
  width: 7rem;
  padding: 10px;
}
.menu-button img {
  width: 20px;
  cursor: pointer;
  display: none;
}
#click {
  display: none;
}
@media (max-width: 768px) {
  .menu-button img {
    display: block;
  }
  .header .container {
    flex-direction: column;
    padding-top: 20px;
    text-align: center;
  }
  .boxes .container {
    margin-top: 20vh;
    display: block;
    text-align: center;
  
  }
  .header .hero-heading {
    padding-top: 10rem;
    font-size: 2rem;
  }
  .navbar ul {
    position: fixed;
    top: 80px;
    left: -100%;
    background: white;
    color: black;
    height: 100vh;
    width: 100%;
    display: block;
    text-align: center;
    transition: all 0.3s ease;
  }
  #click:checked ~ ul {
    left: 0%;
  }
  .navbar ul li {
    display: block;
    margin: 40px 0;
  }
  .navbar ul li a {
    font-size: 20px;
    display: block;
  }
  .project {
    display: none;
  }
  .box-container {
    margin-bottom: 200px;
  }
}
.hero {
  height: 50vh;
  width: 100%;
  background: linear-gradient(rgba(0, 0, 0, 0.342), rgba(0, 0, 0, 0.342)),
    url("./resources/woman1.jpg")
      no-repeat center bottom / cover;
  background-position: center;
  color: whitesmoke;
}

.hero-heading {
  padding-top: 20rem;
  color: white;
}

.navbar .menu-toggle {
  display: none;
  background: none;
  border: none;
  cursor: pointer;
  font-size: 1.5rem;
  color: #000;
}

.nav-active {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  background-color: red;
  z-index: 1000;
}

.nav-active li {
  margin: 10px 0;
}

.box-container {
  background: rgb(103,101,133);
background: linear-gradient(90deg, rgba(103,101,133,1) 0%, rgba(91,73,255,1) 0%, rgba(78,63,219,1) 0%, rgba(6,255,244,1) 0%, rgba(65,52,181,1) 96%, rgba(65,52,181,1) 100%, rgba(0,212,255,1) 100%, rgba(73,59,203,1) 100%, rgba(76,62,213,1) 100%, rgba(0,0,0,1) 100%);
  display: flex;
  /* flex-direction: column; */
  justify-content: center;
  align-items: center;
  height: 100vh;
  
}



.box-in {
  height:fit-content;
}

.boxes .container {
  display: flex;
  flex-wrap: wrap; /* Allows boxes to wrap to the next line */
  justify-content: space-between;
}

.box {
  flex-basis: calc(33.33% - 20px); /* Adjust the width of each box */
}

dt {
  font-weight: bold;
}
dd {
  font-style: italic;
  padding-left: 20px;
}
.contact-bg{
    height: 40vh;
      background: linear-gradient(rgba(0, 0, 0, 0.342), rgba(0, 0, 0, 0.342)),
    url("./resources/workers2.jpg")
      no-repeat center bottom / cover;
    background-position: 50% 100%;
    background-repeat: no-repeat;
    background-attachment: fixed;
    text-align: center;
    color: #fff;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.contact-bg h3{
    font-size: 1.3rem;
    font-weight: 400;
}
.contact-bg h2{
    font-size: 3rem;
    text-transform: uppercase;
    padding: 0.4rem 0;
    letter-spacing: 4px;
}
.line div{
    margin: 0 0.2rem;
}
.line div:nth-child(1),
.line div:nth-child(3){
    height: 3px;
    width: 70px;
    background: #f7327a;
    border-radius: 5px;
}
.line{
    display: flex;
    align-items: center;
}
.line div:nth-child(2){
    width: 10px;
    height: 10px;
    background: #f7327a;
    border-radius: 50%;
}
.text{
    font-weight: 300;
    opacity: 0.9;
}
.contact-bg .text{
    margin: 1.6rem 0;
}
.contact-body{
    max-width: 1320px;
    margin: 0 auto;
    padding: 0 1rem;
}
.contact-info{
    margin: 2rem 0;
    text-align: center;
    padding: 2rem 0;
}
.contact-info span{
    display: block;
}
.contact-info div{
    margin: 0.8rem 0;
    padding: 1rem;
}
.contact-info span .fas{
    font-size: 2rem;
    padding-bottom: 0.9rem;
    color: #f7327a;
}
.contact-info div span:nth-child(2){
    font-weight: 500;
    font-size: 1.1rem;
}
.contact-info .text{
    padding-top: 0.4rem;
}
.contact-form{
    padding: 2rem 0;
    border-top: 1px solid #c7c7c7;
}
.contact-form form{
    padding-bottom: 1rem;
}
.form-control{
    width: 100%;
    border: 1.5px solid #c7c7c7;
    border-radius: 5px;
    padding: 0.7rem;
    margin: 0.6rem 0;
    font-family: 'Open Sans', sans-serif;
    font-size: 1rem;
    outline: 0;
}
.form-control:focus{
    box-shadow: 0 0 6px -3px rgba(48, 48, 48, 1);
}
.contact-form form div{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    column-gap: 0.6rem;
}
.send-btn{
    font-family: 'Open Sans', sans-serif;
    font-size: 1rem;
    text-transform: uppercase;
    color: #fff;
    background: #f7327a;
    border: none;
    border-radius: 5px;
    padding: 0.7rem 1.5rem;
    cursor: pointer;
    transition: all 0.4s ease;
}
.send-btn:hover{
    opacity: 0.8;
}
.contact-form > div img{
    width: 100%;
}
.contact-form > div{
    margin: 0 auto;
    text-align: center;
}
.contact-footer{
    padding: 2rem 0;
    background: rgb(131,133,101);
background: linear-gradient(90deg, rgba(131,133,101,1) 0%, rgba(73,59,203,1) 65%, rgba(73,59,203,1) 97%);
}
.contact-footer h3{
  
    font-size: 1.3rem;
    color: #fff;
    margin-bottom: 1rem;
    text-align: center;
}
.social-links{
    display: flex;
    justify-content: center;
}
.social-links a{
    text-decoration: none;
    width: 40px;
    height: 40px;
    color: #fff;
    border: 2px solid #fff;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0.4rem;
    transition: all 0.4s ease;
}
.social-links a:hover{
    color: #f7327a;
    border-color: #f7327a;
}

@media screen and (min-width: 768px){
    .contact-bg .text{
        width: 70%;
        margin-left: auto;
        margin-right: auto;
    }
    .contact-info{
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }
}

@media screen and (min-width: 992px){
    .contact-bg .text{
        width: 50%;
    }
    .contact-form{
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        align-items: center;
    }
}

@media screen and (min-width: 1200px){
    .contact-info{
        grid-template-columns: repeat(4, 1fr);
    }
}

